--- a/meritrer4/meritrer4.csproj
+++ b/meritrer4/meritrer4.csproj
@@ -46,6 +46,8 @@
     <Content Include="AppIcon.png">
       <OpcRelationship>manifest-icon</OpcRelationship>
     </Content>
+    <Content Include="bin\Debug\meritrer4.pdb" />
+    <Content Include="Elements.xml" />
     <Content Include="Features\Feature1\Feature1.Template.xml">
       <DependentUpon>Feature1.feature</DependentUpon>
     </Content>
@@ -71,6 +73,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="bin\Debug\meritrer4.debugapp" />
+    <None Include="bin\Debug\meritrer4.wsp" />
     <None Include="Features\Feature1\Feature1.feature">
       <FeatureId>{ca4c560f-ef1f-4222-bd6a-734fc132842b}</FeatureId>
     </None>
@@ -79,6 +83,9 @@
     </None>
     <None Include="RemoteEventReceiver1\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{5246d340-d7e3-480e-9d93-8800b6aee0b8}</SharePointProjectItemId>
+    </None>
+    <None Include="SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{0cdbc9d8-9060-4b7c-93ff-2a0bd7548ba7}</SharePointProjectItemId>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
